--- a/HTML/portafolio.html
+++ b/HTML/portafolio.html
@@ -37,7 +37,17 @@
             <video autoplay muted playsinline loop preload="auto">
                 <source src="./img/video.mp4" type="video/mp4">
             </video>
-        
+            <div id="overlay">
+                <h2>
+                    Bienvenidos a mi portafolio
+                </h2>
+                <h3>
+                    Ilse Alvarez <br>
+                    Desarrollador web <br>
+                    <br>
+                    <a href="#" class="btn btnPrimary">contactar</a>
+                </h3>
+            </div>
     </section>
 </body>
 </html>
