--- a/HTML/portafolio.html
+++ b/HTML/portafolio.html
@@ -101,7 +101,7 @@
                     Comentarios: <input name='Comentarios' type='text' tabindex='4'>
                  </div>
                 </fieldset>
-                <a href="#" class="btn btnPrimary">Enviar</a>
+                <a href="#" class="btn btnPrimary">ENVIAR</a>
                </form>
              
              
