--- a/HTML/portafolio.html
+++ b/HTML/portafolio.html
@@ -78,6 +78,10 @@
         <div class="col">
            <img src="./img/web.png"/>
         </div>
+        <div class="col">
+            <img src="./img/frases.jpg"/>
+         </div>
+        </div>
     </section>
 
      <div id="contacto">
