--- a/HTML/portafolio.html
+++ b/HTML/portafolio.html
@@ -11,6 +11,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Festive&family=Open+Sans:wght@300;500;700&display=swap" rel="stylesheet">
 <link href="./css/all.min.css" rel="stylesheet"/>
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+<link rel="stylesheet" href="./css/mediaquerys.css"/>
+<link rel="stylesheet" href="./css/print.css" media="print"/>
 </head>
 <body>
 
@@ -19,7 +21,7 @@
             <h1>Mi portafolio</h1>
         </div>
         <nav class="item">
-            <ul>
+            <ul id="menuWeb">
                 <li>
                     <a href="#main" data-scroll="">Inicio</a>
                 </li>
@@ -32,6 +34,9 @@
                 <li>
                     <a href="#contacto" data-scroll="">Contacto</a>
                 </li>
+                
+            </ul>
+            <ul id="menuMovil">
                 <li>
                     <a href="">
                         <i class="fas fa-bars"></i>
